k8s/base/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: monorepo-backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: monorepo-backend
    template:
        metadata:
            labels:
                app: monorepo-backend
        spec:
            imagePullSecrets:
                - name: ghcr-secret-monorepo
            containers:
                - name: backend
                  image: ghcr.io/thomashermine/monorepo/backend
                  ports:
                      - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: monorepo-backend
spec:
    selector:
        app: monorepo-backend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: monorepo-backend-ingress
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - api.monorepo.thomashermine.be
          secretName: monorepo-backend-tls
    rules:
        - host: api.monorepo.thomashermine.be
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: monorepo-backend
                            port:
                                number: 80
